--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,11 @@ repos:
     rev: 22.10.0
     hooks:
     - id: black
-    - id: poetry-export
-      args: [ "-f", "requirements.txt" ]
-      verbose: true
+
+-   repo: https://github.com/python-poetry/poetry
+    rev: ''  # add version here
+    hooks:
+      - id: poetry-check
+      - id: poetry-lock
+      - id: poetry-export
+        args: ["-f", "requirements.txt", "-o", "requirements.txt"]
