--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,9 +5,10 @@ repos:
     - id: black
 
 -   repo: https://github.com/python-poetry/poetry
-    rev: ''  # add version here
+    rev: 1.4.2
     hooks:
       - id: poetry-check
       - id: poetry-lock
       - id: poetry-export
         args: ["-f", "requirements.txt", "-o", "requirements.txt"]
+        verbose: true
